Reorder and change colours for sports on about page

--- a/about.html
+++ b/about.html
@@ -33,154 +33,314 @@ layout: default
   <div class="container">
     <h1>{% t pages.about.sports_title %}</h1>
     <p>{% t pages.about.sports_texte %}</p>
-    <div class="pictos row">
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/biathlon.png">
+    <div class="pictos visible-md visible-lg row">
+      <div class="col-md-8">
+        <div class="col-md-6 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/biathlon.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.biathlon.link %}">{% t pages.about.sports.biathlon.text %}</a>
+            </div>
           </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.biathlon.link %}">{% t pages.about.sports.biathlon.text %}</a>
+        </div>
+        <div class="col-md-6 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/luge.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.luge.link %}">{% t pages.about.sports.luge.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/bobsleigh.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.bobsleigh.link %}">{% t pages.about.sports.bobsleigh.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/patinage-artistique.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.patinage-artistique.link %}">{% t pages.about.sports.patinage-artistique.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/combine-nordique.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.combine-nordique.link %}">{% t pages.about.sports.combine-nordique.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/patinage-vitesse.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.patinage-vitesse.link %}">{% t pages.about.sports.patinage-vitesse.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/curling.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.curling.link %}">{% t pages.about.sports.curling.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/short-track.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.short-track.link %}">{% t pages.about.sports.short-track.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/hockey-sur-glace.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.hockey-sur-glace.link %}">{% t pages.about.sports.hockey-sur-glace.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/saut-a-ski.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.saut-a-ski.link %}">{% t pages.about.sports.saut-a-ski.text %}</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/bobsleigh.png">
+      <div class="col-md-4">
+        <div class="col-md-12 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/skeleton.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.skeleton.link %}">{% t pages.about.sports.skeleton.text %}</a>
+            </div>
           </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.bobsleigh.link %}">{% t pages.about.sports.bobsleigh.text %}</a>
+        </div>
+        <div class="col-md-12 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/ski-freestyle.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.ski-freestyle.link %}">{% t pages.about.sports.ski-freestyle.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/ski-alpin.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.ski-alpin.link %}">{% t pages.about.sports.ski-alpin.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/ski-de-fond.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.ski-de-fond.link %}">{% t pages.about.sports.ski-de-fond.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-12 col-xs-6">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/snowboard.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.snowboard.link %}">{% t pages.about.sports.snowboard.text %}</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/combine-nordique.png">
+    </div>
+    <div class="pictos hidden-lg hidden-md row">
+      <div class="col-xs-6">
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/biathlon.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.biathlon.link %}">{% t pages.about.sports.biathlon.text %}</a>
+            </div>
           </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.combine-nordique.link %}">{% t pages.about.sports.combine-nordique.text %}</a>
+        </div>
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/bobsleigh.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.bobsleigh.link %}">{% t pages.about.sports.bobsleigh.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/combine-nordique.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.combine-nordique.link %}">{% t pages.about.sports.combine-nordique.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/curling.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.curling.link %}">{% t pages.about.sports.curling.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/hockey-sur-glace.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.hockey-sur-glace.link %}">{% t pages.about.sports.hockey-sur-glace.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/luge.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.luge.link %}">{% t pages.about.sports.luge.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/patinage-artistique.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.patinage-artistique.link %}">{% t pages.about.sports.patinage-artistique.text %}</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/patinage-vitesse.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.patinage-vitesse.link %}">{% t pages.about.sports.patinage-vitesse.text %}</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/curling.png">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.curling.link %}">{% t pages.about.sports.curling.text %}</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/hockey-sur-glace.png">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.hockey-sur-glace.link %}">{% t pages.about.sports.hockey-sur-glace.text %}</a>
+      <div class="col-xs-6">
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/short-track.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.short-track.link %}">{% t pages.about.sports.short-track.text %}</a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/luge.png">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.luge.link %}">{% t pages.about.sports.luge.text %}</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/patinage-artistique.png">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.patinage-artistique.link %}">{% t pages.about.sports.patinage-artistique.text %}</a>
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/saut-a-ski.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.saut-a-ski.link %}">{% t pages.about.sports.saut-a-ski.text %}</a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/patinage-vitesse.png">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.patinage-vitesse.link %}">{% t pages.about.sports.patinage-vitesse.text %}</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/short-track.png">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.short-track.link %}">{% t pages.about.sports.short-track.text %}</a>
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/skeleton.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.skeleton.link %}">{% t pages.about.sports.skeleton.text %}</a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/saut-a-ski.png">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.saut-a-ski.link %}">{% t pages.about.sports.saut-a-ski.text %}</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/skeleton.png">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.skeleton.link %}">{% t pages.about.sports.skeleton.text %}</a>
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/ski-freestyle.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.ski-freestyle.link %}">{% t pages.about.sports.ski-freestyle.text %}</a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/ski-freestyle.png">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.ski-freestyle.link %}">{% t pages.about.sports.ski-freestyle.text %}</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/ski-alpin.png">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.ski-alpin.link %}">{% t pages.about.sports.ski-alpin.text %}</a>
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/ski-alpin.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.ski-alpin.link %}">{% t pages.about.sports.ski-alpin.text %}</a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/ski-de-fond.png">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.ski-de-fond.link %}">{% t pages.about.sports.ski-de-fond.text %}</a>
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/ski-de-fond.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.ski-de-fond.link %}">{% t pages.about.sports.ski-de-fond.text %}</a>
+            </div>
           </div>
         </div>
-      </div>
-      <div class="col-md-4 col-xs-6">
-        <div class="pictos-grp row">
-          <div class="col-md-3">
-            <img src="images/sports/snowboard.png">
-          </div>
-          <div class="col-md-9">
-            <a class="links_sports" href="{% t pages.about.sports.snowboard.link %}">{% t pages.about.sports.snowboard.text %}</a>
+        <div class="col-xs-12">
+          <div class="pictos-grp row">
+            <div class="col-md-3">
+              <img src="images/sports/snowboard.png">
+            </div>
+            <div class="col-md-9">
+              <a class="links_sports" href="{% t pages.about.sports.snowboard.link %}">{% t pages.about.sports.snowboard.text %}</a>
+            </div>
           </div>
         </div>
       </div>
