Add link to about page from about section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ layout: default
       <div class="col-md-8">
         <p class="about_the_yog_p">
           {% t pages.index.about.texte %}
+          <a href="about">{% t pages.index.about.more %}</a>
         </p>
       </div>
     </div>
