--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@ layout: default
               <img src="images/sports/biathlon.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.biathlon.link %}">{% t pages.about.sports.biathlon.text %}</a>
+              <a class="links_sports" target="_blank" href="{% t pages.about.sports.biathlon.link %}">{% t pages.about.sports.biathlon.text %}</a>
             </div>
           </div>
         </div>
@@ -51,7 +51,7 @@ layout: default
               <img src="images/sports/luge.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.luge.link %}">{% t pages.about.sports.luge.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.luge.link %}" target="_blank">{% t pages.about.sports.luge.text %}</a>
             </div>
           </div>
         </div>
@@ -61,7 +61,7 @@ layout: default
               <img src="images/sports/bobsleigh.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.bobsleigh.link %}">{% t pages.about.sports.bobsleigh.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.bobsleigh.link %}" target="_blank">{% t pages.about.sports.bobsleigh.text %}</a>
             </div>
           </div>
         </div>
@@ -71,7 +71,7 @@ layout: default
               <img src="images/sports/patinage-artistique.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.patinage-artistique.link %}">{% t pages.about.sports.patinage-artistique.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.patinage-artistique.link %}" target="_blank">{% t pages.about.sports.patinage-artistique.text %}</a>
             </div>
           </div>
         </div>
@@ -81,7 +81,7 @@ layout: default
               <img src="images/sports/combine-nordique.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.combine-nordique.link %}">{% t pages.about.sports.combine-nordique.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.combine-nordique.link %}" target="_blank">{% t pages.about.sports.combine-nordique.text %}</a>
             </div>
           </div>
         </div>
@@ -91,7 +91,7 @@ layout: default
               <img src="images/sports/patinage-vitesse.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.patinage-vitesse.link %}">{% t pages.about.sports.patinage-vitesse.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.patinage-vitesse.link %}" target="_blank">{% t pages.about.sports.patinage-vitesse.text %}</a>
             </div>
           </div>
         </div>
@@ -101,7 +101,7 @@ layout: default
               <img src="images/sports/curling.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.curling.link %}">{% t pages.about.sports.curling.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.curling.link %}" target="_blank">{% t pages.about.sports.curling.text %}</a>
             </div>
           </div>
         </div>
@@ -111,7 +111,7 @@ layout: default
               <img src="images/sports/short-track.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.short-track.link %}">{% t pages.about.sports.short-track.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.short-track.link %}" target="_blank">{% t pages.about.sports.short-track.text %}</a>
             </div>
           </div>
         </div>
@@ -121,7 +121,7 @@ layout: default
               <img src="images/sports/hockey-sur-glace.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.hockey-sur-glace.link %}">{% t pages.about.sports.hockey-sur-glace.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.hockey-sur-glace.link %}" target="_blank">{% t pages.about.sports.hockey-sur-glace.text %}</a>
             </div>
           </div>
         </div>
@@ -131,7 +131,7 @@ layout: default
               <img src="images/sports/saut-a-ski.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.saut-a-ski.link %}">{% t pages.about.sports.saut-a-ski.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.saut-a-ski.link %}" target="_blank">{% t pages.about.sports.saut-a-ski.text %}</a>
             </div>
           </div>
         </div>
@@ -143,7 +143,7 @@ layout: default
               <img src="images/sports/skeleton.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.skeleton.link %}">{% t pages.about.sports.skeleton.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.skeleton.link %}" target="_blank">{% t pages.about.sports.skeleton.text %}</a>
             </div>
           </div>
         </div>
@@ -153,7 +153,7 @@ layout: default
               <img src="images/sports/ski-freestyle.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.ski-freestyle.link %}">{% t pages.about.sports.ski-freestyle.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.ski-freestyle.link %}" target="_blank">{% t pages.about.sports.ski-freestyle.text %}</a>
             </div>
           </div>
         </div>
@@ -163,7 +163,7 @@ layout: default
               <img src="images/sports/ski-alpin.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.ski-alpin.link %}">{% t pages.about.sports.ski-alpin.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.ski-alpin.link %}" target="_blank">{% t pages.about.sports.ski-alpin.text %}</a>
             </div>
           </div>
         </div>
@@ -173,7 +173,7 @@ layout: default
               <img src="images/sports/ski-de-fond.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.ski-de-fond.link %}">{% t pages.about.sports.ski-de-fond.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.ski-de-fond.link %}" target="_blank">{% t pages.about.sports.ski-de-fond.text %}</a>
             </div>
           </div>
         </div>
@@ -183,7 +183,7 @@ layout: default
               <img src="images/sports/snowboard.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.snowboard.link %}">{% t pages.about.sports.snowboard.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.snowboard.link %}" target="_blank">{% t pages.about.sports.snowboard.text %}</a>
             </div>
           </div>
         </div>
@@ -197,7 +197,7 @@ layout: default
               <img src="images/sports/biathlon.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.biathlon.link %}">{% t pages.about.sports.biathlon.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.biathlon.link %}" target="_blank">{% t pages.about.sports.biathlon.text %}</a>
             </div>
           </div>
         </div>
@@ -207,7 +207,7 @@ layout: default
               <img src="images/sports/bobsleigh.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.bobsleigh.link %}">{% t pages.about.sports.bobsleigh.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.bobsleigh.link %}" target="_blank">{% t pages.about.sports.bobsleigh.text %}</a>
             </div>
           </div>
         </div>
@@ -217,7 +217,7 @@ layout: default
               <img src="images/sports/combine-nordique.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.combine-nordique.link %}">{% t pages.about.sports.combine-nordique.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.combine-nordique.link %}" target="_blank">{% t pages.about.sports.combine-nordique.text %}</a>
             </div>
           </div>
         </div>
@@ -227,7 +227,7 @@ layout: default
               <img src="images/sports/curling.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.curling.link %}">{% t pages.about.sports.curling.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.curling.link %}" target="_blank">{% t pages.about.sports.curling.text %}</a>
             </div>
           </div>
         </div>
@@ -237,7 +237,7 @@ layout: default
               <img src="images/sports/hockey-sur-glace.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.hockey-sur-glace.link %}">{% t pages.about.sports.hockey-sur-glace.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.hockey-sur-glace.link %}" target="_blank">{% t pages.about.sports.hockey-sur-glace.text %}</a>
             </div>
           </div>
         </div>
@@ -247,7 +247,7 @@ layout: default
               <img src="images/sports/luge.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.luge.link %}">{% t pages.about.sports.luge.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.luge.link %}" target="_blank">{% t pages.about.sports.luge.text %}</a>
             </div>
           </div>
         </div>
@@ -257,7 +257,7 @@ layout: default
               <img src="images/sports/patinage-artistique.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.patinage-artistique.link %}">{% t pages.about.sports.patinage-artistique.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.patinage-artistique.link %}" target="_blank">{% t pages.about.sports.patinage-artistique.text %}</a>
             </div>
           </div>
         </div>
@@ -267,7 +267,7 @@ layout: default
               <img src="images/sports/patinage-vitesse.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.patinage-vitesse.link %}">{% t pages.about.sports.patinage-vitesse.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.patinage-vitesse.link %}" target="_blank">{% t pages.about.sports.patinage-vitesse.text %}</a>
             </div>
           </div>
         </div>
@@ -279,7 +279,7 @@ layout: default
               <img src="images/sports/short-track.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.short-track.link %}">{% t pages.about.sports.short-track.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.short-track.link %}" target="_blank">{% t pages.about.sports.short-track.text %}</a>
             </div>
           </div>
         </div>
@@ -289,7 +289,7 @@ layout: default
               <img src="images/sports/saut-a-ski.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.saut-a-ski.link %}">{% t pages.about.sports.saut-a-ski.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.saut-a-ski.link %}" target="_blank">{% t pages.about.sports.saut-a-ski.text %}</a>
             </div>
           </div>
         </div>
@@ -299,7 +299,7 @@ layout: default
               <img src="images/sports/skeleton.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.skeleton.link %}">{% t pages.about.sports.skeleton.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.skeleton.link %}" target="_blank">{% t pages.about.sports.skeleton.text %}</a>
             </div>
           </div>
         </div>
@@ -309,7 +309,7 @@ layout: default
               <img src="images/sports/ski-freestyle.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.ski-freestyle.link %}">{% t pages.about.sports.ski-freestyle.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.ski-freestyle.link %}" target="_blank">{% t pages.about.sports.ski-freestyle.text %}</a>
             </div>
           </div>
         </div>
@@ -319,7 +319,7 @@ layout: default
               <img src="images/sports/ski-alpin.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.ski-alpin.link %}">{% t pages.about.sports.ski-alpin.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.ski-alpin.link %}" target="_blank">{% t pages.about.sports.ski-alpin.text %}</a>
             </div>
           </div>
         </div>
@@ -329,7 +329,7 @@ layout: default
               <img src="images/sports/ski-de-fond.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.ski-de-fond.link %}">{% t pages.about.sports.ski-de-fond.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.ski-de-fond.link %}" target="_blank">{% t pages.about.sports.ski-de-fond.text %}</a>
             </div>
           </div>
         </div>
@@ -339,14 +339,13 @@ layout: default
               <img src="images/sports/snowboard.png">
             </div>
             <div class="col-md-9">
-              <a class="links_sports" href="{% t pages.about.sports.snowboard.link %}">{% t pages.about.sports.snowboard.text %}</a>
+              <a class="links_sports" href="{% t pages.about.sports.snowboard.link %}" target="_blank">{% t pages.about.sports.snowboard.text %}</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <p class="about_the_yog_p descr_pictos"><a href="{% t pages.about.sports_fin_link %}" class="link_site">{% t pages.about.sports_fin %}</a>
-    </p>
+    <p class="about_the_yog_p descr_pictos">{% t pages.about.sports_fin %}</p>
   </div>
 </div>
 <div class="facts">
