Fix bug facts text

--- a/about.html
+++ b/about.html
@@ -363,7 +363,7 @@ layout: default
         <div class="wrap_facts">
           <h1 class="h1_facts" data-ix="fadeindown">{% t pages.about.facts.fact2.number %}</h1>
           <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/medaille_white.png" srcset="images/facts/medaille_white-p-500x500.png 500w, images/facts/medaille_white-p-800x800.png 800w" width="130">
-          <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact2.number %}</h1>
+          <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact2.text %}</h1>
         </div>
       </div>
       <div class="col-md-2">
@@ -377,14 +377,14 @@ layout: default
         <div class="wrap_facts">
           <h1 class="h1_facts" data-ix="fadeindown">{% t pages.about.facts.fact4.number %}</h1>
           <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/medaille_white.png" srcset="images/facts/medaille_white-p-500x500.png 500w, images/facts/medaille_white-p-800x800.png 800w" width="130">
-          <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact4.number %}</h1>
+          <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact4.text %}</h1>
         </div>
       </div>
       <div class="col-md-2">
         <div class="wrap_facts">
           <h1 class="h1_facts" data-ix="fadeindown">{% t pages.about.facts.fact5.number %}</h1>
           <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/medaille_white.png" srcset="images/facts/medaille_white-p-500x500.png 500w, images/facts/medaille_white-p-800x800.png 800w" width="130">
-          <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact5.number %}</h1>
+          <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact5.text %}</h1>
         </div>
       </div>
     </div>
