--- a/about.html
+++ b/about.html
@@ -352,38 +352,38 @@ layout: default
   <div class="container">
     <h1>{% t pages.about.facts.title %}</h1>
     <div class="row">
-      <div class="col-md-2 col-md-offset-1">
+      <div class="col-md-2 col-md-offset-1 fact">
         <div class="wrap_facts">
           <h1 class="h1_facts" data-ix="fadeindown">{% t pages.about.facts.fact1.number %}</h1>
           <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/maillot_white.png" srcset="images/facts/maillot_white-p-500x500.png 500w, images/facts/maillot_white-p-800x800.png 800w" width="130">
           <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact1.text %}</h1>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 fact">
         <div class="wrap_facts">
           <h1 class="h1_facts" data-ix="fadeindown">{% t pages.about.facts.fact2.number %}</h1>
-          <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/medaille_white.png" srcset="images/facts/medaille_white-p-500x500.png 500w, images/facts/medaille_white-p-800x800.png 800w" width="130">
+          <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/globe_white.png" srcset="images/facts/globe_white-p-500x500.png 500w, images/facts/globe_white-p-800x800.png 800w" width="130">
           <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact2.text %}</h1>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 fact">
         <div class="wrap_facts">
           <h1 class="h1_facts" data-ix="fadeindown">{% t pages.about.facts.fact3.number %}</h1>
           <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/boule_neige_white.png" srcset="images/facts/boule_neige_white-p-500x500.png 500w, images/facts/boule_neige_white-p-800x800.png 800w" width="130">
           <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact3.text %}</h1>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 fact">
         <div class="wrap_facts">
           <h1 class="h1_facts" data-ix="fadeindown">{% t pages.about.facts.fact4.number %}</h1>
-          <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/medaille_white.png" srcset="images/facts/medaille_white-p-500x500.png 500w, images/facts/medaille_white-p-800x800.png 800w" width="130">
+          <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/calendrier.png" width="130">
           <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact4.text %}</h1>
         </div>
       </div>
-      <div class="col-md-2">
+      <div class="col-md-2 fact">
         <div class="wrap_facts">
           <h1 class="h1_facts" data-ix="fadeindown">{% t pages.about.facts.fact5.number %}</h1>
-          <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/medaille_white.png" srcset="images/facts/medaille_white-p-500x500.png 500w, images/facts/medaille_white-p-800x800.png 800w" width="130">
+          <img class="img_facts" data-ix="fadeinscaleup" sizes="130px" src="images/facts/benevole.png" width="130">
           <h1 class="h2_facts" data-ix="fadeintop">{% t pages.about.facts.fact5.text %}</h1>
         </div>
       </div>
