--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@ layout: default
 <div class="about_yog about_yog_1 ">
   <div class="container">
     <h1>{% t pages.about.title1 %}</h1>
-    <div class="row">
-      <div class="col-md-6">
+    <div class="about-content">
+      <div class="about-text">
         <img src="images/19-02-16-Skeleton-Womens-Individual-04-p-1080x720.jpeg" alt="">
       </div>
-      <div class="col-md-6 info-text">
+      <div class="about-image">
         {% capture text %}{%t pages.about.texte1 %}{% endcapture %}
         <p>{{ text | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}}</p>
       </div>
@@ -18,13 +18,13 @@ layout: default
 <div class="about_yog about_yog_2">
   <div class="container">
     <h1>{% t pages.about.title2 %}</h1>
-    <div class="row">
-      <div class="col-md-6 info-text">
+    <div class="about-content">
+      <div class="about-text">
         {% capture text %}{%t pages.about.texte2 %}{% endcapture %}
         <p>{{ text | markdownify }}</p>
       </div>
-      <div class="col-md-6">
-        <img src="images/20-02-16-Ice-Hockey-Bronze-Medal-Mens-02-p-1080x717.jpeg" alt="">
+      <div class="about-image">
+        <span class="helper"></span><img src="images/lillehammer_2016.jpg" alt="">
       </div>
     </div>
   </div>
