Try a workaround for flex box on IE

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@ layout: default
     <h1>{% t pages.about.title1 %}</h1>
     <div class="about-content">
       <div class="about-text">
-        <img src="images/19-02-16-Skeleton-Womens-Individual-04-p-1080x720.jpeg" alt="">
+        <img src="images/photo_CIO.jpg" alt="">
       </div>
       <div class="about-image">
         {% capture text %}{%t pages.about.texte1 %}{% endcapture %}
