Change newsletter formulaire name

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@ layout: default
 <div class="social_feed_section social_wall">
     <div class='container'>
 
+
+
     </div>
 </div>
 <div class="newsletter_cta">
@@ -84,7 +86,7 @@ layout: default
       </div>
       <div class="col-md-6">
         <div class="">
-          <form class="newsletter_cta_form" data-name="Email Form" id="email-form-newsletter" name="email-form-newsletter" action="/" netlify>
+          <form class="newsletter_cta_form" data-name="Email Form" id="email-form-newsletter" name="email-form-newsletter-2" action="/" netlify>
             <div class="row">
               <div class="col-md-9">
                 <input class="newsletter_cta_field w-input" data-name="Email" id="email" maxlength="256" name="email" placeholder="{% t pages.index.newsletter.placeholder %}" required="required" type="email">
