--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ layout: default
             <div class="row">
               <div class="col-md-9">
                 <input class="newsletter_cta_field w-input" data-name="Email" id="email" maxlength="256" name="email" placeholder="{% t pages.index.newsletter.placeholder %}" required="required" type="email">
-                <input data-name="Lang" id="lang" maxlength="2" name="lang" placeholder="{{ site.lang }}" required="required" type="hidden">
+                <input data-name="Lang" id="lang" maxlength="2" name="lang" value="{{ site.lang }}" required="required" type="hidden">
               </div>
               <div class="col-md-3">
                 <input class="newsletter_cta_btn w-button" data-wait="Please wait..." type="submit" value="{% t pages.index.newsletter.button %}">
