--- a/news.html
+++ b/news.html
@@ -1,11 +1,51 @@
 ---
 layout: default
 ---
+{% capture nowyear %}{{ site.time | date: '%Y' }}{% endcapture %}
+{% assign news2017 = 0 %}
+{% assign news2018 = 0 %}
+{% assign news2019 = 0 %}
+{% assign news2020 = 0 %}
+{% for new in site.data.contentful.spaces.news.news %}
+  {% capture newyear %}{{ new.date | date: '%Y' }}{% endcapture %}
+  {% if newyear == '2017' %}
+    {% assign news2017 = news2017 | plus: 1 %}
+  {% endif %}
+  {% if newyear == '2018' %}
+    {% assign news2018 = news2018 | plus: 1 %}
+  {% endif %}
+  {% if newyear == '2019' %}
+    {% assign news2019 = news2019 | plus: 1 %}
+  {% endif %}
+  {% if newyear == '2020' %}
+    {% assign news2020 = news2020 | plus: 1 %}
+  {% endif %}
+{% endfor %}
 <div class="news-page">
   <div class="container">
     <h1 class="h1_big_news h1_newsletter_cta">News</h1>
+      {% if nowyear >= '2017' %}
+        {% if news2017 > 9 %}
+          <a href="/news-archives/2017" style="color:#fff;">link 2017</a>
+        {% endif %}
+      {% endif %}
+      {% if nowyear >= '2018' %}
+        {% if news2018 > 9 %}
+          <a href="#" style="color:#fff;">link 2018</a>
+        {% endif %}
+      {% endif %}
+      {% if nowyear >= '2019' %}
+        {% if news2019 > 9 %}
+          <a href="#" style="color:#fff;">link 2019</a>
+        {% endif %}
+      {% endif %}
+      {% if nowyear >= '2020' %}
+        {% if news2020 > 9 %}
+          <a href="#" style="color:#fff;">link 2020</a>
+        {% endif %}
+      {% endif %}
     <div class="row">
-      {% for new in site.data.contentful.spaces.news.news %}
+      {% for new in site.data.contentful.spaces.news.news limit:9 %}
         <div class="new col-md-4">
             <div>
               <img src="{{ new.image.url }}">
