--- a/news.html
+++ b/news.html
@@ -76,7 +76,7 @@ layout: default
             {% else %}
               {% capture link %}{{new.titreEn}}{% endcapture %}
             {% endif %}
-            <p class="news_date">{{new.date | date: "%d.%m.%Y"}}<a href="/{{ link | datapage_url: dir }}">Lire la suite</a></p>
+            <p class="news_date">{{new.date | date: "%d.%m.%Y"}}<a href="/{{ link | datapage_url: dir }}">{% t pages.index.news.plus %}</a></p>
         </div>
         {% capture modulo %}{{ forloop.index | modulo: 3 }}{% endcapture %}
         {% if modulo == "0" %}
