Put back Facebook on social wall

--- a/index.html
+++ b/index.html
@@ -84,8 +84,11 @@ layout: default
 
       {% social_wall
 
+        fb_username: lausanne2020,
+        fb_amount: 5,
+
         tw_username: lausanne2020,
-        tw_amount: 9,   
+        tw_amount: 4,   
 
       %}
 
