--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@ layout: default
                     {% if site.lang == "fr" %} {{ new.titre }} {% elsif site.lang == "de" %} {{ new.titreDe }} {% else %} {{ new.titreEn }} {% endif %}
                 </h1>
                 <p class="p_news">
-                    {% if site.lang == "fr" %} {{ new.texte | markdownify | newline_to_br | remove: '
-                    <p>' | remove: '</p>'}} {% elsif site.lang == "de" %} {{ new.texteDe | markdownify | newline_to_br | remove: '
-                    <p>' | remove: '</p>'}} {% else %} {{ new.texteEn | markdownify | newline_to_br | remove: '
-                    <p>' | remove: '</p>'}} {% endif %}
+                    {% if site.lang == "fr" %} {{ new.texte | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}} {% elsif site.lang == "de" %} {{ new.texteDe | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}} {% else %} {{ new.texteEn | markdownify | newline_to_br | remove: '<p>' | remove: '</p>'}} {% endif %}
                 </p>
                 {% capture dir %}news-{{site.lang}}{% endcapture %} {% if site.lang == "fr" %} {% capture link %}{{new.titre}}{% endcapture %} {% elsif site.lang == "de" %} {% capture link %}{{new.titreDe}}{% endcapture %} {% else %} {% capture link %}{{new.titreEn}}{%
                 endcapture %} {% endif %}
