Fade in and slide in effects on all pages

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <div class="about_yog about_yog_1 ">
-  <div class="container">
+  <div class="container fade-in-module">
     <h1>{% t pages.about.title1 %}</h1>
     <div class="about-content">
       <div class="about-text">
@@ -16,7 +16,7 @@ layout: default
   </div>
 </div>
 <div class="about_yog about_yog_2">
-  <div class="container">
+  <div class="container fade-in-module">
     <h1>{% t pages.about.title2 %}</h1>
     <div class="about-content">
       <div class="about-text">
@@ -391,7 +391,7 @@ layout: default
   </div>
 </div>
 <div class="key_numbers">
-  <div class="container">
+  <div class="container fade-in-module">
     <h1>
     {% assign keyn = site.data.contentful.spaces.keyNumbers.keyNumbers[0]%}
     {% if site.lang == "fr" %}
