--- a/news.html
+++ b/news.html
@@ -48,7 +48,7 @@ layout: default
     </div>
     <div class="row">
       {% for new in site.data.contentful.spaces.news.news limit:9 %}
-        <div class="new col-md-4">
+        <div class="new come-in-module col-md-4">
             <div>
               <img src="{{ new.image.url }}">
             </div>
