--- a/venues.html
+++ b/venues.html
@@ -7,7 +7,7 @@ layout: default
   <div class="enorme_claim_wrap"></div>
 </div>
 <div class="sites">
-  <div class="container">
+  <div class="container fade-in-module">
     <h1>
       {% if site.lang == "fr" %}
         {{ section1.titre }}
@@ -17,7 +17,7 @@ layout: default
         {{ section1.titreEn }}
       {% endif %}
     </h1>
-    <p class="discover_1 discover_p">
+    <p class="discover_1 discover_p fade-in-module">
       {% if site.lang == "fr" %}
         {{ section1.description | markdownify | remove: '<p>' | remove: '</p>' | newline_to_br}}
       {% elsif site.lang == "de" %}
@@ -27,7 +27,7 @@ layout: default
       {% endif %}
     </p>
     <div class="row-sites row">
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-6 come-in-module">
         <a class="sqr" title="{{section1.titreSite1}}" href="#">
           <div class="inside">
             <div class="hover">
@@ -50,7 +50,7 @@ layout: default
           </div>
         </a>
       </div>
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-6 come-in-module">
         <a class="sqr" title="{{section1.titreSite2}}" href="#">
           <div class="inside">
             <div class="hover">
@@ -73,7 +73,7 @@ layout: default
           </div>
         </a>
       </div>
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-6 come-in-module">
         <a class="sqr" title="{{section1.titreSite3}}" href="#">
           <div class="inside">
             <div class="hover">
@@ -96,7 +96,7 @@ layout: default
           </div>
         </a>
       </div>
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-6 come-in-module">
         <a class="sqr" title="{{section1.titreSite4}}" href="#">
           <div class="inside">
             <div class="hover">
@@ -128,7 +128,7 @@ layout: default
   </div>
 </div>
 <div class="sites">
-  <div class="container">
+  <div class="container fade-in-module">
     <h1>
       {% if site.lang == "fr" %}
         {{ section2.titre }}
@@ -138,7 +138,7 @@ layout: default
         {{ section2.titreEn }}
       {% endif %}
     </h1>
-    <p class="discover_1 discover_p">
+    <p class="discover_1 discover_p fade-in-module">
       {% if site.lang == "fr" %}
         {{ section2.description | markdownify | remove: '<p>' | remove: '</p>' | newline_to_br}}
       {% elsif site.lang == "de" %}
@@ -148,7 +148,7 @@ layout: default
       {% endif %}
     </p>
     <div class="row-sites row">
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-6 come-in-module">
         <a class="sqr" title="{{section2.titreSite1}}" href="#">
           <div class="inside">
             <div class="hover">
@@ -171,7 +171,7 @@ layout: default
           </div>
         </a>
       </div>
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-6 come-in-module">
         <a class="sqr" title="{{section2.titreSite2}}" href="#">
           <div class="inside">
             <div class="hover">
@@ -194,7 +194,7 @@ layout: default
           </div>
         </a>
       </div>
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-6 come-in-module">
         <a class="sqr" title="{{section2.titreSite3}}" href="#">
           <div class="inside">
             <div class="hover">
@@ -217,7 +217,7 @@ layout: default
           </div>
         </a>
       </div>
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-3 col-sm-6 come-in-module">
         <a class="sqr" title="{{section2.titreSite4}}" href="#">
           <div class="inside">
             <div class="hover">
