Add parallax effect on venues page

--- a/venues.html
+++ b/venues.html
@@ -3,7 +3,7 @@ layout: default
 ---
 {% assign section1 = site.data.contentful.spaces.sectionSites.sectionSites[0]%}
 {% assign section2 = site.data.contentful.spaces.sectionSites.sectionSites[1]%}
-<div class="hero hero-discover">
+<div class="hero-discover">
   <div class="enorme_claim_wrap"></div>
 </div>
 <div class="sites">
